# fold_db

./: .codecov.yml  .cursorrules  .env.example  .gitattributes  .gitignore  .task-blocked.md  AGENTS.md  AI_RULES.md  AtomRef_to_Molecule_Rename_Plan.md  CHANGELOG.md  CHANGELOG_API_KEY_CONFIG.md  CLAUDE.md  CONTRIBUTING.md  COVERAGE_SETUP.md  Cargo.toml  DECLARATIVE_SCHEMAS_SUMMARY.md  DEMO_RESULTS.md  DRY_REFACTORING_REVIEW.md  DYNAMODB_FIX_TEST_RESULTS.md  DYNAMODB_PARTITION_KEY_FIX.md  DYNAMODB_REVIEW.md  FINAL_TEST_RESULTS.md  HTTP_ENDPOINT_DUPLICATION_ANALYSIS.md  INGESTION_PROGRESS.md  LAMBDA_CONTEXT_REFACTORING.md  LAMBDA_FEATURE_REVIEW.md  LAMBDA_QUICK_START.md  LLM_QUERY_IMPLEMENTATION.md  LOG_HANDLERS.md  MOLECULE_UUID_PERSISTENCE_REVIEW.md  NATIVE_APP_SETUP_COMPLETE.md  PUBLISHING_CHECKLIST.md  PUBLISH_READY.md  QUICK_START.md  README.md  RELEASE_NOTES_v0.1.4.md  SCHEMA_HANDLERS.md  SCHEMA_SERVICE.md  SCHEMA_SERVICE_MIGRATION.md  SCHEMA_SERVICE_SCHEMA_TYPES.md  (+40 more)
.github/: FUNDING.yml  GITHUB_ACTIONS_SETUP.md  MACOS_BUILD_FIX.md  README.md  RELEASE_WORKFLOW_VALIDATION.md  pull_request_template.md
.vercel/: project.json
HomebrewFormula/: folddb.rb
archived_schemas/: BlogPost.json
available_schemas/: Analytics.json  BlogPost-simplified.json  BlogPost.json  BlogPostAuthorIndex.json  BlogPostTagIndex.json  BlogPostWordIndex.json  ConversationMessageStats.json  Event.json  EventCategoryIndex.json  EventOrganizerIndex.json  Inventory.json  Message.json  MessageSenderIndex.json  MessageWordIndex.json  Order.json  OrderStatusIndex.json  Product.json  ProductBrandIndex.json  ProductCategoryIndex.json  ProductReview.json  ProductReviewStats.json  ProductReviewUserIndex.json  ProductTagIndex.json  README.md  TestRangeSchema.json  TransformBase.json  TransformSchema.json  User.json  UserActivity.json  UserActivityTypeIndex.json  UserByStatus.json  UserOrderStats.json  UserScores.json
bindings/: FieldMapper.ts  JsonTopology.ts  PrimitiveType.ts  PrimitiveValueType.ts  TopologyNode.ts
crates/core/: Cargo.toml  build.rs
crates/core/src/: error.rs  lib.rs  progress.rs  test_helpers.rs  testing_utils.rs  user_context.rs
crates/core/src/access/: audit.rs  capability.rs  mod.rs  types.rs
crates/core/src/atom/: merkle.rs  mod.rs  molecule.rs  molecule_hash.rs  molecule_hash_range.rs  molecule_range.rs  molecule_tests.rs  provenance.rs
crates/core/src/bulletin/: mod.rs
crates/core/src/crypto/: e2e.rs  mod.rs  provider.rs
crates/core/src/db_operations/: atom_operations.rs  atom_store.rs  conflict_operations.rs  core.rs  metadata_operations.rs  metadata_store.rs  mod.rs  org_operations.rs  permissions_store.rs  schema_operations.rs  view_operations.rs
crates/core/src/db_operations/native_index/: embedding_index.rs  embedding_model.rs  mod.rs  types.rs
crates/core/src/db_operations/native_index/face/: detector.rs  embedder.rs  model.rs  pipeline.rs
crates/core/src/fold_db_core/: event_monitor.rs  factory.rs  fold_db.rs  mod.rs  mutation_manager.rs  pending_task_tracker.rs  process_results_subscriber.rs  sync_coordinator.rs  trigger_runner.rs  view_orchestrator.rs
crates/core/src/fold_db_core/orchestration/: index_status.rs
crates/core/src/fold_db_core/query/: formatter.rs  hash_range_query.rs  query_executor.rs
crates/core/src/llm_registry/prompts/: mod.rs  query.rs
crates/core/src/logging/: core.rs  features.rs
crates/core/src/logging/outputs/: file.rs  structured.rs  web.rs
crates/core/src/messaging/: async_bus.rs  constructors.rs  error_handling.rs  mod.rs
crates/core/src/messaging/events/: query_events.rs
crates/core/src/org/: tests.rs  types.rs
crates/core/src/schema/: core.rs  field_mapper.rs  schema_types.rs
crates/core/src/schema/types/: data_classification.rs  declarative_schemas.rs  errors.rs  field_value_type.rs  key_config.rs  schema.rs
crates/core/src/schema/types/field/: base.rs  common.rs  filter_utils.rs  hash_field.rs  hash_range_field.rs  mod.rs  range_field.rs  single_field.rs  variant.rs
crates/core/src/security/: mod.rs  signing.rs  utils.rs
crates/core/src/sharing/: signing.rs
crates/core/src/storage/: config.rs  encrypting_store.rs  mod.rs  node_config_store.rs  sled_pool.rs  syncing_namespaced_store.rs  syncing_store.rs  upload_storage.rs
crates/core/src/sync/: auth.rs  engine.rs  error.rs  mod.rs  org_sync.rs  p2p.rs  s3.rs  snapshot.rs
crates/core/src/triggers/: clock.rs  mod.rs  types.rs
crates/core/src/view/: dependency_tracker.rs  derived_metadata.rs  invertibility.rs  registry.rs  resolver.rs  transform_field_override.rs  types.rs
crates/core/tests/: atom_deduplication_test.rs  convergent_replay_test.rs  list_atoms_by_schema_test.rs  mutation_provenance_test.rs  org_key_prefixing_test.rs  org_sync_e2e_test.rs  org_sync_replay_batch_drops_test.rs  range_molecule_persistence_test.rs  repro_schema_error.rs  trigger_firing_schema_test.rs  trigger_runner_integration_test.rs  trust_domains_test.rs  view_invalidation_test.rs  view_query_test.rs  view_unavailable_test.rs  view_wasm_integration_test.rs  view_write_test.rs  wasm_determinism.rs  wasm_transform_test.rs
crates/observability/: Cargo.toml
crates/observability/src/: attrs.rs  init.rs  lib.rs  propagation.rs  sampling.rs
crates/observability/src/layers/: error.rs  fmt.rs  mod.rs  otlp_metrics.rs  otlp_traces.rs  reload.rs  ring.rs  span_metrics.rs  web.rs
crates/observability/tests/: init_node_with_web.rs  integration.rs  otlp_traces_nonblocking.rs  service_name_init_panic.rs
data.backup.20251004_001427/: db  snap.00000000000272A4
data_temp/: db  snap.0000000000009F0E
docs/: AI_QUERY_EXAMPLES.md  ASYNC_MUTATION_COMPLETION.md  BACKGROUND_INDEXING_OPTIMIZATION.md  DESIGN_E2E_ENCRYPTION.md  DYNAMODB_SCHEMA_SERVICE.md  GOAL.md  INDEXING_STATUS_API.md  INGESTION_QUICK_REFERENCE.md  INGESTION_WORKFLOW.md  LAMBDA_BINARY_SIZE_ANALYSIS.md  LAMBDA_FEATURE.md  LAMBDA_IMPLEMENTATION_SUMMARY.md  LAMBDA_INTEGRATION.md  LAMBDA_LITE_CRATE_ANALYSIS.md  LAMBDA_MULTITENANCY.md  LAMBDA_RUNTIME_USAGE.md  LAUNCH_PLAN.md  MUTATION_OPTIMIZATION_OPPORTUNITIES.md  (+48 more)
(+1437 files in other folders)
