[package]
name = "fold_db"
version = "0.3.0"
edition = "2021"
publish = false

[features]
default = []
ts-bindings = ["ts-rs"]  # Generate TypeScript bindings when enabled
cli = ["dep:clap", "dep:clap_complete"]  # CLI tooling (clap derives)
aws-backend = ["aws-config", "aws-sdk-dynamodb", "aws-sdk-s3", "aws-sdk-sns", "aws-sdk-sqs", "serde_dynamo"]  # AWS backends (DynamoDB, S3, SNS, SQS)
transform-wasm = ["dep:wasmtime"]  # Enable WASM transform execution for views
test-utils = []  # Expose test helpers (MockEmbeddingModel, etc.) for integration tests

[dependencies]
# Cryptography
ring = "0.17.14"
base64 = "0.21.0"
ed25519-dalek = { version = "2.0", features = ["rand_core", "serde"] }
aes-gcm = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
ts-rs = { version = "10", optional = true, features = ["serde-compat", "serde-json-impl"] }

# Storage
sled = "0.34"

# Core utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
rand = "0.8"
tempfile = "3.8"
seahash = "4.1"
once_cell = "1"
colored = "3.1.1"
log = { version = "0.4", features = ["std"] }

# Async runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "signal", "io-util"] }
tokio-stream = { version = "0.1", features = ["sync"] }
futures-util = "0.3"
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Optional CLI support
clap = { version = "4.4", features = ["derive", "string"], optional = true }
clap_complete = { version = "4.4", optional = true }

# OpenAPI schema derives (used by core types)
utoipa = { version = "4", features = ["actix_extras"] }

# HTTP client (used by schema_client in fold_db_core)
reqwest = { version = "0.11", features = ["json", "multipart"] }

# Vector embedding model for semantic search
fastembed = "4"

# WASM runtime for transform views
wasmtime = { version = "29", optional = true }

# AWS SDK
aws-config = { version = "1.0", optional = true }
aws-sdk-dynamodb = { version = "1.0", optional = true }
aws-sdk-s3 = { version = "1.0", optional = true }
aws-sdk-sns = { version = "1.0", optional = true }
aws-sdk-sqs = { version = "1.0", optional = true }
serde_dynamo = { version = "4.3.0", features = ["aws-sdk-dynamodb+1"], optional = true }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "full"] }
reqwest = { version = "0.11", features = ["json"] }
aws-smithy-runtime-api = "1.9.2"
aws-smithy-types = "1.3.4"
http = "1.4.0"

tracing-subscriber = "0.3"
tracing = "0.1"
wat = "1"

[lib]
name = "fold_db"
path = "src/lib.rs"

[profile.dev-release]
inherits = "release"
opt-level = 3
lto = "off"
codegen-units = 16
debug = false
panic = "abort"
