[package]
name = "fold_db"
version = "0.3.0"
edition = "2021"
publish = false

[features]
default = []
ts-bindings = ["ts-rs"]  # Generate TypeScript bindings when enabled
cli = ["dep:clap", "dep:clap_complete"]  # CLI tooling (clap derives)
transform-wasm = ["dep:wasmtime"]  # Enable WASM transform execution for views
test-utils = []  # Expose test helpers (MockEmbeddingModel, etc.) for integration tests
face-detection = ["dep:ort", "dep:image"]  # Face detection and embedding via ONNX Runtime

[dependencies]
# Cryptography
base64 = "0.21.0"
ed25519-dalek = { version = "2.0", features = ["rand_core", "serde"] }
aes-gcm = "0.10"
hkdf = "0.12"
hmac = "0.12"
sha2 = "0.10"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = { version = "10", optional = true, features = ["serde-compat", "serde-json-impl"] }

# Storage
sled = "0.34"

# Core utilities
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.9"
croner = "2"
rand = "0.8"
tempfile = "3.8"
seahash = "4.1"
once_cell = "1"
tracing = "0.1"

# Async runtime
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync", "time", "fs", "signal", "io-util"] }
futures = "0.3"
async-trait = "0.1"

# Error handling
thiserror = "1.0"

# Optional CLI support
clap = { version = "4.4", features = ["derive", "string"], optional = true }
clap_complete = { version = "4.4", optional = true }

# OpenAPI schema derives (used by core types)
utoipa = { version = "4", features = ["actix_extras"] }

# HTTP client (used by schema_client in fold_db_core)
reqwest = { version = "0.11", features = ["json", "multipart", "blocking"] }

# Shared telemetry crate — provides `propagation::inject_w3c` for egress.
observability = { path = "../observability" }

# Vector embedding model for semantic search
fastembed = "4"
# Pin ureq to 2.x — fastembed uses ureq internally and ureq 3.x broke the TLS API
ureq = "2"

# WASM runtime for transform views
wasmtime = { version = "29", optional = true }

# Face detection (ONNX runtime + image processing)
ort = { version = "2.0.0-rc.9", optional = true, default-features = false }
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg"] }

ed25519-compact = "2.2.0"

# Build-time dependencies used by build.rs to download + extract the
# InsightFace face-detection model pack into OUT_DIR when the
# `face-detection` cargo feature is enabled. Keeping them as
# build-dependencies (not normal `dependencies`) means the compiled
# binary carries no extra runtime code — the model bytes are pulled
# in via `include_bytes!` and the download machinery exists only at
# build time.
[build-dependencies]
ureq = "2"
zip = { version = "2", default-features = false, features = ["deflate"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "full"] }
reqwest = { version = "0.11", features = ["json"] }

tracing-subscriber = "0.3"
wat = "1"
temp-env = "0.3"
serial_test = "3"

[lib]
name = "fold_db"
path = "src/lib.rs"
