[package]
name = "observability"
version = "0.1.0"
edition = "2021"
publish = false
description = "Shared telemetry substrate for fold_db (tracing layers, W3C propagation, redaction)."

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.28"
tracing-log = "0.2"

opentelemetry = "0.27"
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "metrics"] }
opentelemetry-http = "0.27"

thiserror = "1"
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }

http = "1"
reqwest = { version = "0.11", default-features = false }
tokio = { version = "1.0", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.0", features = ["sync", "macros", "rt"] }
log = "0.4"
