[package]
name = "observability"
version = "0.1.0"
edition = "2021"
publish = false
description = "Shared telemetry substrate for fold_db (tracing layers, W3C propagation, redaction)."

[dependencies]
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "fmt"] }
tracing-appender = "0.2"
tracing-opentelemetry = "0.28"
tracing-log = "0.2"

# `opentelemetry` + `opentelemetry_sdk` back the no-op TracerProvider that
# stamps W3C `trace_id` / `span_id` onto every span (RING entries and the
# Sentry layer both lift these ids off the parent span's OtelData
# extension). `opentelemetry-http` powers the W3C propagator's
# `HeaderExtractor` consumed by `propagation::extract_parent_context`.
opentelemetry = "0.27"
opentelemetry_sdk = "0.27"
opentelemetry-http = "0.27"

# Sentry integration — ERROR-only sink driven by `OBS_SENTRY_DSN`.
# `default-features = false` opts out of the panic integration (binaries
# register their own panic handlers) and the heavy `debug-images` feature;
# we keep `transport` (reqwest + native-tls) and `contexts` so events carry
# runtime metadata. `sentry-tracing` is the tracing-subscriber bridge and
# stays compatible with `tracing-subscriber 0.3`.
sentry = { version = "0.47", default-features = false, features = ["backtrace", "contexts", "release-health", "transport"] }
sentry-tracing = "0.47"

thiserror = "1"
once_cell = "1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
uuid = { version = "1.0", features = ["v4"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }

http = "1"
reqwest = { version = "0.11", default-features = false }
# `sync` powers the broadcast channel for the WEB layer.
tokio = { version = "1.0", features = ["sync"] }

[dev-dependencies]
tempfile = "3"
tokio = { version = "1.0", features = ["sync", "macros", "rt"] }
log = "0.4"
# `test` enables `sentry::test::with_captured_events`, used to assert that
# the ERROR layer captures events with the right tags without hitting a
# real Sentry server.
sentry = { version = "0.47", default-features = false, features = ["test"] }
